assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Limelight&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');

/*CSS Variables*/

:root {
    --primary-color: #85b497;
    --secondary-color: #f8f9e2;
    --primary-text: #1e3708;
    --secondary-text: #f5ca74;
    --primary-font: "Limelight", Sans serif;
    --secondary-font: "Tinos", Cursive;
}


.navbar * {
    background-color: var(--primary-color);
    color: var(--primary-text);

}



/* Removes the padding on nav bar set by bootstrap*/
#navbar {
    margin: 0 !important;
    padding: 0px !important;
}

p {
    color: var(--primary-text);
}

.card {
    background-color: var(--secondary-color);
    border: none;
    justify-content: center;
    color: var(--primary-text);
}

.about-us-card {
    padding: 15 15 15 15;
    margin: auto;

}

.owner-photo {
    max-width: 546px;
    max-height: 409.5px;
}

h1,
h2,
h3 {
    font-family: var(--primary-font);
    color: var(--primary-text);
    padding-top: 17px;



}

body {

    background-color: var(--secondary-color);
    padding-top: 93px;
}

h1 {
    color: var(--primary-text);

}

/* Gallery page*/
#photos img {
    width: 100%;
    line-height: 1em;

    border: solid 2px;
    border-color: var(--secondary-color);


}

#photos {
    line-height: 2;
    column-count: 2;
    column-gap: 0;

}

/* Events page*/
#events-carousel {
    display: flex;
    max-width: 546px;
    max-height: 409px;
}

.services-card {
    background-color: var(--secondary-color);
    border: none;
    justify-content: center;
    color: var(--primary-text);
}

/* Testimonials Section*/
#testimonials {
    padding-top: 8rem;
    /* prevent navbar overlap */
    padding-bottom: 3rem;
}

/* Contact us section*/

#contact-us {
    background-image: url("../images/Cottage-image.jpg");
    background-size: cover;
    background-position: 100%;
    padding: 20% 10% 20% 10%;
    flex-grow: 1;


}

#contact-us-form {
    color: var(--primary-text);
    background-color: var(--primary-color);
    padding: 30px;

}

#contact-us-form>h2 {
    color: var(--primary-text);

}

.text-input {
    background-color: var(--secondary-color);
    color: var(--primary-text);
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid var(--secondary-color);
    border-radius: 2px;
    padding: 0 5px;
}

.radio-buttons {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.submit-button {
    margin-top: 20px;
    border-radius: 10px;
    padding: 15px 32px;
    font-size: 100%;
    background-color: var(--primary-text);
    color: var(--secondary-color);
    display: flex;
    justify-items: center;
}

#text-box {
    height: 178px;
}
.thank-you{
    font-size: 1rem;
    margin: 4% 4% 4% 4%;
}

.footer {
    background-color: var(--primary-color);
    padding: 20px 10% 20px 10%;
    color: var(--primary-text);
    list-style-type: none;
    display: flex;
    justify-content: space-around;
    justify-content: space-evenly;
    justify-content: space-between;
    margin: 0 !important;
    gap: 10px;
    flex-wrap: wrap;
    font-size: 30px;
    align-items: baseline;

}

/* overides the link defauly color */
a {
    color: inherit;
}

.footer a :hover {
    color: var(--secondary-text);
}

.footer .social-links i {
    color: var(--primary-text);

}


.footer .social-links i:hover {
    color: var(--secondary-text);
}

/* Media queries */

/* Small screens */
@media screen and (min-width: 375px) {

    /* increase font size in events table when screen size is large enough */
    #about-us {
        font-size: 1rem;
    }

    #contact-info {
        display: none;
    }
    #contact-us {
        
        padding: 15% 15% 16% 15%;
       
    
    
    }
    #contact-us-form {
        color: var(--primary-text);
        background-color: var(--primary-color);
        padding: 20px;
    
    }
    #text-box {
        height: 25px;
    }

    .footer {
        display: flex;
        justify-content: space-evenly;
    }

    #photos {
        column-count: 2;

    }
    .footer-at-bottom {
        position: relative;
        bottom: 0;
        width: 100%;
    }
}

/* Medium devices (tablets, 768px and up) */
@media screen and (min-width: 768px) {


    #photos {
        column-count: 3;
    }

    .card {
        display: flex;
        justify-content: space-evenly;
        flex-wrap: wrap;
    }

    #services {
        padding-top: 2rem;
        padding-bottom: 2rem;

    }

    #events-cards {
        display: flex;
        justify-items: center;
        justify-content: space-between;
        flex-wrap: wrap;

    }

    #testimonials-images * {
        display: flex;
        justify-items: center;


    }

    .owner-photo {
        padding: 20px 20px 20px 20px;
        display: flex;



    }


    #contact-us {
        background-position: center;
        position: relative;
        
        background-size: cover;
        background-position: 100%;
        padding: 20% 10% 20% 10%;
        flex-grow: 1;

    }

    #contact-us-form {
        max-width: 400px;
        position: relative;
        top: 50px;
        left: 10%;
        bottom:150px;





    }

    .text-input:hover {
        border-color: var(--primary-text);
    }

    .submit-button:hover {
        background-color: var(--secondary-text);
        color: var(--primary-text);
    }

    /* pushes the footer down on medium screens*/

}

.footer-at-bottom {
    position: absolute;
    bottom: 0;
    width: 100%;
}



/* Large devices (small laptops, 992px and up) */
@media screen and (min-width: 992px) {

    #about-us {
        display: flex;
        justify-items: center;
        padding: 10 10 10 10;
    }

    #photos {
        column-count: 4;
    }

    #contact-us {
        background-position: center;
        position: relative;
        max-width: 100%;
        background-size: cover;
        background-position: 100%;
        padding: 20% 10% 20% 10%;
        flex-grow: 1;
    }

    #contact-us-form {
        max-width: 400px;
        position: relative;
        top: 50px;
        left: 10%;
    }

    

    #contact-us-form {
        max-width: 400px;
        position: relative;
        top: 50px;
        left: 10%;
        
    }
    .footer-at-bottom {
        position: absolute;
        bottom: 0;
        width: 100%;
    }

    .text-input:hover {
        border-color: var(--primary-text);
    }

    .submit-button:hover {
        background-color: var(--secondary-text);
        color: var(--primary-text);
    }

}

/* xl devices (large desktops, 1200px and up) */
@media screen and (min-width: 1200px) {

    #about-us {
        display: flex;
        justify-items: center;
    }

    #testimonials-image {
        padding-top: 20px;
        padding-bottom: 20px;

    }
    
}

/* xxl devices (larger desktops, 1400px and up) */
@media screen and (min-width: 1400px) {

    #about-us {
        display: flex;
        justify-items: center;
    }
    .footer-at-bottom {
        position: relative;
        bottom: 0;
        width: 100%;
    }
}

